objects/Connection__c.object
<CustomObject>
    <fields>
        <fullName>Account_Location__c</fullName>
        <description>Used for Mail Merge Templates</description>
        <formula>Account__r.BillingCity + &apos;, &apos; +  Account__r.BillingState + &apos;, &apos; +  Account__r.BillingCountry</formula>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Market_Manager_Name__c</fullName>
        <description>Needed for Mail Merge Templates</description>
        <formula>Account__r.Market_Manager_Name__c</formula>
        <label>Account Market Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Contracted_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Repco__c</fullName>
        <label>Account Repco</label>
        <referenceTo>Account_Repco__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Connectivity_System_Vendor__c</fullName>
        <description>Needed for email template</description>
        <formula>Connectivity_System__r.Connectivity_Vendor__r.Name</formula>
        <label>Connectivity System Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connectivity_System__c</fullName>
        <label>Connectivity System</label>
        <referenceTo>Connectivity_System__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expedia_ID__c</fullName>
        <description>Used for Mail Merge Templates</description>
        <formula>Account__r.Expedia_Hotel_Id__c</formula>
        <label>Expedia ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Date__c</fullName>
        <label>Go Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Connection_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Integration Connection Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Interaction__c</fullName>
        <label>Last Interaction</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Enrollment_Chasers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Enrollment Chasers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Mapping_Chasers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Mapping Chasers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSG_Account_ID__c</fullName>
        <description>Used to build out the Connection Integration Key in before insert trigger. This formula field allows us to save a SOQL query to get the account object&apos;s data</description>
        <formula>Account__r.External_Account_Id__c</formula>
        <label>PSG Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>EQC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Displays the highest rollout step. Can be manually overridden.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Connecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Form Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Enrollment Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Enrollment Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Enrollment Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Form Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mapping Information Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Mapping Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Mapping Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Mapping Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mapping Confirmation Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venere_Id__c</fullName>
        <formula>Account__r.Venere_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venere Id</label>
        <type>Text</type>
    </fields>
    <label>Connection</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>